# ragflow-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260301_0030_2df1a31f28f1_initial_schema_users_tenants_members_.py  20260301_1302_f7090923539f_add_vector_db_types_and_connections.py  20260301_1400_3a8f1d9c2e7b_add_embedding_providers_and_configs.py
app/: config.py  database.py  main.py
app/auth/: __init__.py  jwt.py  password.py  verification.py
app/connectors/: __init__.py  factory.py  milvus_connector.py  pinecone_connector.py  qdrant_connector.py
app/middleware/: logging.py
app/models/: __init__.py  embedding.py  item.py  tenant.py  user.py  vectordb.py
app/providers/: __init__.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/repositories/: __init__.py  auth_repository.py  embedding_repository.py  item_repository.py  vectordb_repository.py
app/routers/: __init__.py  auth.py  embedding.py  health.py  items.py  tenant.py  vectordb.py
app/schemas/: __init__.py  auth.py  embedding.py  item.py  tenant.py  vectordb.py
app/services/: auth_service.py  embedding_service.py  item_service.py  vectordb_service.py
envs/: .env.dev  .env.example  .env.prod  .env.qa
scripts/: alter_users_add_verification_mysql.sql  create_tables_mysql.sql  start_dev.sh  start_prod.sh  start_qa.sh  stop_server.sh  test_register_flow.py
tests/: conftest.py
tests/integration/: test_items_router.py
tests/unit/: test_auth_service.py  test_embedding.py  test_item_service.py  (+1 more)
