[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ragflow-api"
version = "0.1.0"
requires-python = ">=3.12"
description = "FastAPI microservice with MySQL backend"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.35",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "alembic>=1.13.0",
]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode        = "auto"
testpaths           = ["tests"]
python_files        = ["test_*.py"]
python_functions    = ["test_*"]
addopts             = "--cov=app --cov-report=term-missing --cov-report=html"

# ── ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["app", "tests"]

[tool.ruff.lint]
select  = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore  = ["E501"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
